# cloud-init-seed

./: .gitignore  README.rst  setup.cfg
cloud_init_seed/: __init__.py
cloud_init_seed/tests/fixtures/: meta_data_1  user_data1
