[metadata]
name = cloud-init-seed
summary = Create cloud-init compatible image seeds
description-file =
    README.rst
author = Thomas Bechtold
author-email = thomasbechtold@jpberlin.de
home-page = https://github.com/toabctl/cloud-init-seed
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: End Users/Desktop
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages = cloud_init_seed

[entry_points]
console_scripts =
    ciseed = cloud_init_seed:main

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[wheel]
universal = 1
